# forwardview

./: .gitignore  Makefile  Makefile.dev  Makefile.docker  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py
app/account/: account.py
app/db/: models.py
app/endpoint/: auth.py  main.py  ticker.py
app/resources/templates/: signup.html  ticker.html
app/static/js/ticker/: ohlc.js
app/templates/: index.html  knowledgebase.html  login.html  ticker.html
app/ticker/: indicators.py  ohlc.py  ticker.py
app/utils/: utils.py
downloader/: download_ticker_list.py  download_ticker_ohlc.py  downloader.py
provision/: docker-compose-downloader.yml  docker-compose.yml  dockerfile.app  dockerfile.downloader  entrypoint.sh  init.sql
provision/deployment/: docker-compose-downloader.yml  docker-compose-provision.yml  docker-compose.yml  nginx.conf
provision/deployment/nginx/: dockerfile.nginx  nginx.conf
provision/deployment/nginx/conf.d/: app.conf
provision/local/: docker-compose-downloader.yml  docker-compose.yml  nginx.conf
provision/production/: docker-compose-downloader.yml  docker-compose.yml
resources/static/css/: bootstrap.css  knowledgebase.css
resources/static/js/home/: main.js
resources/static/js/ticker/: main.js  ohlc.js
resources/templates/: account.html  base.html  index.html  knowledgebase.html  login.html  signup.html  tck.html  ticker.html
static/css/: knowledgebase.css
static/js/home/: main.js
static/js/ticker/: main.js  ohlc.js  overview.js
tests/unit/: test_models.py
