[tool.poetry]
name = "forwardview"
version = "0.0.1"
description = "App for forward view tests."
authors = []

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
flask_assets = "*"
flask-sqlalchemy = "*"
flask-login = "*"
flask-caching = "*"
flask-cachebuster = "*"
pandas = "*"
scipy = "*"
python-dotenv = "*"
finvizfinance = "*"
alpha_vantage = "*"
pyarrow = "*"
jupyter = "*"
backoff = "*"
pymysql = "*"
waitress = "*"
redis = "*"
cryptography = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^20.8b1"
isort = "^5.6.4"

[tool.poetry.scripts]
run = "wsgi:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"